# ergane

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
benchmarks/: run.py
docs/: cli.md  mcp-server.md  python-library.md
docs/plans/: 2026-02-18-live-crawl-dashboard-design.md  2026-02-18-live-crawl-dashboard.md  2026-02-18-mcp-server-design.md  2026-02-18-mcp-server-plan.md  2026-02-21-js-rendering-design.md  2026-02-21-js-rendering.md  2026-02-23-auth-sessions-design.md  2026-02-23-auth-sessions.md  2026-02-26-optimizations-design.md  2026-02-26-optimizations.md
ergane/: __init__.py  config.py  main.py
ergane/auth/: __init__.py  config.py  errors.py  manager.py  session_store.py
ergane/crawler/: __init__.py  cache.py  checkpoint.py  engine.py  fetcher.py  hooks.py  parser.py  pipeline.py  playwright_fetcher.py  scheduler.py
ergane/mcp/: __init__.py  __main__.py  prompts.py  resources.py  tools.py
ergane/models/: schemas.py
ergane/presets/: __init__.py
src/: __init__.py  main.py
tests/: conftest.py  test_auth_config.py  test_auth_exports.py  test_auth_integration.py  test_auth_manager.py  test_auth_roundtrip.py  test_cache.py  test_checkpoint.py  test_cli_auth.py  test_coercion.py  test_config.py  test_engine.py  test_engine_auth.py  test_extractor.py  test_fetcher.py  test_hooks.py  test_integration.py  test_mcp.py  test_output_formats.py  test_parquet_mapper.py  test_parser.py  test_pipeline.py  test_playwright_fetcher.py  test_presets.py  test_scheduler.py  test_schema.py  test_session_store.py
(+17 files in other folders)
