[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "arachne"
version = "0.1.0"
description = "High-performance async web scraper with selectolax parsing"
requires-python = ">=3.10"
dependencies = [
    "httpx[http2]>=0.27.0",
    "selectolax>=0.3.21",
    "polars>=1.0.0",
    "pydantic>=2.0.0",
    "click>=8.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[project.scripts]
arachne = "src.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src"]
